[tool.poetry]
name = "cluster-analysis-example"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Borodynya Maxim <borody.maxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JaskierM/cluster-analysis-example"
keywords = ["ml", "clustering", "analysis"]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"


[tool.poetry.group.research.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
dataprep = "^0.4.5"
yellowbrick = "^1.5"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
