[tool.poetry]
name = "cluster-analysis-example"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Borodynya Maxim <borody.maxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JaskierM/cluster-analysis-example"
keywords = ["ml", "clustering", "analysis"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.research.dependencies]
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
yellowbrick = "^1.5"
ydata-profiling = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
